namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: observabilidad
---
apiVersion: v1
kind: Namespace
metadata:
  name: aplicacion
