app-test-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-node
  labels:
    app: app-node
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-node
  template:
    metadata:
      labels:
        app: app-node
    spec:
      containers:
      - name: app-node
        image: romeroju/test-app:latest
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
