app-test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-test-service
spec:
  selector:
    app: app-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
